syntax = "proto3";

package org.wfa.measurement.api.v2alpha.eventtemplates;

import "google/protobuf/descriptor.proto";
import "google/protobuf/duration.proto";
import "wfa/measurement/api/v2alpha/event_annotations.proto";

option java_package = "org.wfanet.measurement.api.v2alpha.eventtemplates";
option java_multiple_files = true;

enum AgeRange {
  AGE_RANGE_UNSPECIFIED = 0;
  AGE_18_TO_24 = 1;
  // … other values
}

message TestVideoTemplate {
  option (.wfa.measurement.api.v2alpha.event_template) = {
    display_name: "Video Ad"
    description: "A simple Event Template for a video ad."
  };

  AgeRange age = 1;

  ViewDuration duration = 2;
}

message ViewDuration {
  option (.wfa.measurement.api.v2alpha.event_field) = {
    display_name: "View Duration"
    // … remaining metadata
  };
  google.protobuf.Duration value = 1;
}